<resources>
    <string name="app_name">Baking App</string>
    <string name="load_error">Enable to load data</string>
    <string name="ingredients_caption">You need:</string>
    <string name="steps_caption">Instructions:</string>
    <string name="step">Step: %1$d</string>
    <string name="move_back">Previous</string>
    <string name="move_next">Next</string>
    <string name="servings">%1$d servings</string>

    <!-- Measure names -->
    <string name="cup_measure">Cup</string>
    <string name="tsp_measure">Teaspoon</string>
    <string name="tblsp_measure">Tablespoon</string>
    <string name="g_measure">Grams</string>
    <string name="unit_measure">Unit</string>

    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">No new recipes</string>
    <string name="ingredients_empty_view_text">Can not find the recipe</string>
    <string name="action_play_recipe">Play</string>

    <string name="ingredients_widget_label">Ingredients</string>
    <string name="recipes_widget_label">Recipes</string>
    <string name="recipe_image">Recipe image</string>
</resources>
