...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/steps_caption"
                style="@style/RecipeSectionTitle"
...
